// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoreLibrary Unit Tests - MarkdownItRender Basic Render Test: Can render from file 1`] = `
"
<!doctype html>
<html>
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
        <title>Document</title>
    </head>
    <body>
        <h1>test</h1>
<p>hello world</p>

    </body>
</html>
"
`;

exports[`CoreLibrary Unit Tests - MarkdownItRender Basic Render Test: Can render from string 1`] = `
"
<!doctype html>
<html>
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
        <title>Document</title>
    </head>
    <body>
        <h1>test</h1>
<p>hello world</p>

    </body>
</html>
"
`;

exports[`CoreLibrary Unit Tests - MarkdownItRender Render Test: Can use plugins 1`] = `
"
<!doctype html>
<html>
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
        <title>Document</title>
    </head>
    <body>
        <h1>test</h1>
<p>hello <sup>world</sup></p>

    </body>
</html>
"
`;

exports[`CoreLibrary Unit Tests - MarkdownItRender Render Test: Styles are rendered (externalStylesUrls) 1`] = `
"
<!doctype html>
<html>
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
        <title>Document</title>
        <link rel="stylesheet" type="text/css" href="https://hoo.bar/styles/test.css" />
    </head>
    <body>
        <h1>test</h1>
<p>hello world</p>

    </body>
</html>
"
`;

exports[`CoreLibrary Unit Tests - MarkdownItRender Render Test: Styles are rendered (styleFilePaths) 1`] = `
"
<!doctype html>
<html>
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
        <title>Document</title>
        <link rel="stylesheet" type="text/css" href="./test.css" />
    </head>
    <body>
        <h1>test</h1>
<p>hello world</p>

    </body>
</html>
"
`;

exports[`CoreLibrary Unit Tests - MarkdownItRender Render Test: with logger 1`] = `
[MockFunction] {
  "calls": [
    [
      "getModel() called.",
    ],
    [
      "styles: %o",
      [
        "./test.css",
      ],
    ],
    [
      "styles: %o",
      [
        "https://hoo.bar/styles/test.css",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`CoreLibrary Unit Tests - MarkdownItRender readTemplateFromFile 1`] = `
"
<html>
    <head>
        {{#{styles}}}
        <link rel="stylesheet" type="text/css" href="{{.}}" />
        {{/styles}}
    </head>
    <body>
        {{{body}}}
    </body>
"
`;
